# cardano-lsm-rust

./: .gitignore  100_PERCENT_CONFORMANCE.md  BENCHMARKS.md  BUGFIXES.md  BUGFIXES_v2.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SUMMARY.md  CONFORMANCE.md  CONFORMANCE_INTEGRATION.md  CONFORMANCE_TESTING.md  CONFORMANCE_WORKFLOW.md  Cargo.lock.placeholder  Cargo.toml  FINAL_SUMMARY.md  HASKELL_SETUP.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  NOTICE  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SESSION_SUMMARY.md  STATS.md  STATUS.md  TESTING.md  TODO.md  flake.nix  justfile  quick-start.sh
.claude/: settings.local.json
benches/: lsm_benchmarks.rs
conformance-generator/: API_INTEGRATION.md  CHANGELOG.md  LICENSE  README.md  cabal.project  conformance-generator.cabal
conformance-generator/app/: CrossFormatWriter.hs  Main.hs
conformance-generator/src/: ConformanceGen.hs
conformance-generator/test-output/: test_51.expected.json  test_51.json  test_52.expected.json  test_52.json  test_53.expected.json  test_53.json
conformance-tests/: test_1.expected.json  test_1.json  test_10.expected.json  test_10.json  test_2.expected.json  test_2.json  test_3.expected.json  test_3.json  test_4.expected.json  test_4.json  test_5.expected.json  test_5.json  test_6.expected.json  test_6.json  test_7.expected.json  test_7.json  test_8.expected.json  test_8.json  test_9.expected.json  test_9.json
examples/: README.md  mock_types.rs  mock_wallet.rs  read_hayate_tips.rs  test_key_bug.rs
flake/nixosModules/: example.nix
perSystem/: devShells.nix  packages.nix
scripts/: investigate-lsm-tree.sh
src/: atomic_file.rs  checksum.rs  checksum_handle.rs  compaction.rs  io_backend.rs  lib.rs  merkle.rs  monoidal.rs  session_lock.rs  snapshot.rs  sstable.rs  sstable_new.rs
tests/: batch_operations.rs  conformance.rs  cross_format.rs  range_tombstone_bug.rs  test_basic_operations.rs  test_compaction.rs  test_merkle_tree.rs  test_monoidal.rs  test_range_queries.rs  test_rollback_insert.rs  test_snapshot_restoration.rs  test_snapshots.rs  test_wal_recovery.rs  test_wallet_integration.rs
