[package]
name = "cardano-lsm"
version = "0.1.0"
edition = "2021"
authors = ["Cardano LSM Contributors"]
license = "Apache-2.0"
description = "Pure Rust port of Cardano's LSM tree for blockchain indexing"
repository = "https://github.com/yourusername/cardano-lsm-rust"
keywords = ["lsm", "database", "cardano", "blockchain", "storage"]
categories = ["database-implementations", "data-structures"]

[dependencies]
# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"  # CBOR format for snapshot metadata (matches Haskell)
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Hashing
blake2 = "0.10"
blake3 = "1.5"

# Compression
lz4 = "1.24"
snap = "1.1"

# I/O
memmap2 = "0.9"
byteorder = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"

# Utilities
bytes = "1.5"
crc32fast = "1.3"
hostname = "0.3"
uuid = { version = "1.6", features = ["v4"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# io_uring support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.4", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "minwinbase", "processthreadsapi", "winnt"] }

[features]
# Enable io_uring for async I/O on Linux (matches Haskell blockio-uring)
io-uring = ["tokio-uring"]
default = []

[dev-dependencies]
# Testing
proptest = "1.4"
quickcheck = "1.0"
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"
hex = "0.4"

[[bench]]
name = "lsm_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
